--- a/municipios.Rmd
+++ b/municipios.Rmd
@@ -254,10 +254,10 @@ levels(painel$CatPop) <- c("entre 50 e 500 mil", "mais de 500 mil", "menos de 50
 painel$CatPop <- factor(painel$CatPop, levels = rev(c("menos de 50 mil","entre 50 e 500 mil","mais de 500 mil")))
 
 # última mexida no dataset: acrescentar capitais
-capitais <- c("Aracaju", "Belém", "Belo Horizonte", "Boa Vista", "Campo Grande", "Cuiabá", "Curitiba", "Florianópolis", "Fortaleza", "Goiânia", "João Pessoa", "Macapá", "Maceió", "Manaus", "Natal", "Palmas", "Porto Alegre", "Porto Velho", "Recife", "Rio Branco", "Rio de Janeiro", "Salvador", "São Luís", "São Paulo", "Teresina", "Vitória")
+capitais <- c("Aracaju - SE", "Belém - PA", "Belo Horizonte - BH", "Boa Vista - RR", "Campo Grande - MS", "Cuiabá - MT", "Curitiba - PR", "Florianópolis - SC", "Fortaleza - CE", "Goiânia - GO", "João Pessoa - PB", "Macapá - AP", "Maceió - AL", "Manaus - AM", "Natal - RN", "Palmas - TO", "Porto Alegre - RS", "Porto Velho - RO", "Recife - PE", "Rio Branco - AC", "Rio de Janeiro - RJ", "Salvador - BA", "São Luís - MA", "São Paulo - SP", "Teresina - PI", "Vitória - ES")
 
 # vou criar um vetor lógico com TRUE quando a cidade for capital (ou seja, estiver no vetor" capitais").
-painel$eh_capital <- painel$MunicipioSemUF %in% capitais
+painel$eh_capital <- painel$Municipio %in% capitais
 
 # vou criar um vetor com o grau de dependência das capitais, com base nesse vetor lógico. se não for capital, ele vai atribuir 0, e aí vou substituir os zeros por NA. Isso para gerar um gráfico boxplot com os pontos das capitais num jitter. vamos ver.
 painel$GrauDepCapit <- painel$GrauDep * painel$eh_capital
@@ -598,11 +598,15 @@ sumario_tot %>%
 Em percentuais:
 
 ```{r percentuais_no_sumario_reg, warning=FALSE}
-sumario_percent_reg <- sumario_tot_gathered
-sumario_percent_reg$Percent <- 0
-for (i in 1:nrow(sumario_percent_reg)) {
-  sumario_percent_reg$Percent[i] <- scales::percent(round(sumario_percent_reg$Valor[i]/totais_v[as.character(sumario_percent_reg$Variavel[i])],3))
+
+sumario_tot_gathered$Percent <- 0
+for (i in 1:nrow(sumario_tot_gathered)) {
+  sumario_tot_gathered$Percent[i] <- scales::percent(round(sumario_tot_gathered$Valor[i]/totais_v[as.character(sumario_tot_gathered$Variavel[i])],2))
 }
+# arredondei para 2 pq no gráfico não caberiam as casas decimais...
+
+sumario_percent_reg <- sumario_tot_gathered
+
 sumario_percent_reg$Valor <- NULL
 
 sumario_percent_reg %>% spread(key = Variavel, value = Percent) %>%
@@ -616,7 +620,9 @@ sumario_percent_reg %>% spread(key = Variavel, value = Percent) %>%
 
 ```{r plots_dist_reg}
 
-# vetor com posições das linhas
+# vetor com posições das linhas 
+# nota posterior: só resolvi acrescentar os percentuais depois. então talvez nem precisasse desse vetor aqui. 
+# mas agora não dá tempo de avaliar, já que estava funcionando, deixa assim...
 soma <- 0
 pop_acum <- NULL
 for (reg in rev(levels(sumario_tot$Regiao)[1:5])){
@@ -625,9 +631,10 @@ for (reg in rev(levels(sumario_tot$Regiao)[1:5])){
 }
 
 
-plotSumario_Regional <- ggplot(sumario_tot_gathered, aes(fill=Regiao, y=Valor, x=Variavel)) +
+plotSumario_Regional <- ggplot(sumario_tot_gathered, aes(fill=Regiao, y=Valor, x=Variavel, label=Percent)) +
     coord_flip() +
     geom_bar( stat="identity", position="fill", width=0.6, color = "white", size = 1) +
+    geom_text(size = 2, position = position_fill(vjust = 0), hjust = -0.1, vjust = -2.6, family = "Roboto Condensed Light")+
     labs(
       x = NULL,
       y = NULL,
@@ -1195,7 +1202,8 @@ scatter2015_dep <- function(df){
     subtitle = "Municípios Brasileiros em 2015. Escalas logarítmicas.",
     caption = "Fonte: Siconfi"
   )+
-    scale_color_manual(values = c("#832F11","#F8AC08","#96C11E","#08869B"))+
+    #scale_color_manual(values = c("#832F11","#F8AC08","#96C11E","#08869B"))+
+    scale_color_manual(values = coresDep)+
   geom_abline(intercept = 0, slope = 1, linetype="dotted")+
   geom_abline(intercept = desloc(0.80), slope = 1, linetype="dotted")+
   geom_abline(intercept = desloc(0.90), slope = 1, linetype="dotted")+
@@ -1224,7 +1232,7 @@ Para uma melhor visualização, dividiremos o gráfico conforme as regiões.
 scatter2015_dep(painel%>%filter(Regiao == "Norte"))+labs(subtitle = paste("Região", "Norte"))
 scatter2015_dep(painel%>%filter(Regiao == "Nordeste"))+labs(subtitle = paste("Região", "Nordeste"))
 # o centro-oeste não tem municípios com dependência menor que 50%, então o ggplot muda a cor. fixei o vetor de cores na marra só para essa região, mas ficou deselegante.
-scatter2015_dep(painel%>%filter(Regiao == "Centro-Oeste"))+labs(subtitle = paste("Região", "Centro-Oeste"))+scale_color_manual(values = c("#832F11","#F8AC08","#96C11E"))
+scatter2015_dep(painel%>%filter(Regiao == "Centro-Oeste"))+labs(subtitle = paste("Região", "Centro-Oeste"))+scale_color_manual(values = coresDep[1:3])#+scale_color_manual(values = c("#832F11","#F8AC08","#96C11E"))
 scatter2015_dep(painel%>%filter(Regiao == "Sudeste"))+labs(subtitle = paste("Região", "Sudeste"))
 scatter2015_dep(painel%>%filter(Regiao == "Sul"))+labs(subtitle = paste("Região", "Sul"))
 ```
@@ -1464,7 +1472,7 @@ bpRegiao <- ggplot(painel,
   #coord_flip() +
   ylim(0.25,1) +
   geom_boxplot(outlier.colour = "darkgray", outlier.alpha = 0.2)+#outlier.size=0)+
-  geom_jitter(aes(x = Regiao, y = GrauDepCapit, size = pop, color = Regiao, label=Municipio),
+  geom_jitter(aes(x = Regiao, y = ifelse(eh_capital, GrauDepCapit, NA), size = pop, color = Regiao, label=Municipio),
               position = position_jitter(width=0.2, height = 0),
               alpha = 0.6,
               show_guide=FALSE,
@@ -1481,9 +1489,11 @@ bpRegiao <- ggplot(painel,
   theme_GTCEAD() #+
   #theme(axis.text.x = element_text(angle=-30, size = 7))
 
-bpRegiao
+#bpRegiao
 
-#ggplotly(bpAtividade)
+#vamos transformar o gráfio em uma versão interativa.
+library(plotly)
+ggplotly(bpRegiao+theme(legend.position = "none"), tooltip = c("Municipio", "GrauDep", "pop"))
 ```
 
 Podemos analisar esse mesmo gráfico para categoria de tamanho do município.
